syntax = "proto3";

package enums;

option go_package = "github.com/Shakkuuu/sekai-songs-mylist/internal/gen/enums";

// DifficultyTypes
enum DifficultyType {
  DIFFICULTY_TYPE_UNSPECIFIED = 0;
  DIFFICULTY_TYPE_EASY = 1;
  DIFFICULTY_TYPE_NORMAL = 2;
  DIFFICULTY_TYPE_HARD = 3;
  DIFFICULTY_TYPE_EXPERT = 4;
  DIFFICULTY_TYPE_MASTER = 5;
  DIFFICULTY_TYPE_APPEND = 6;
}

// MusicVideoTypes
enum MusicVideoType {
  MUSIC_VIDEO_TYPE_UNSPECIFIED = 0;
  MUSIC_VIDEO_TYPE_3D = 1;
  MUSIC_VIDEO_TYPE_2D = 2;
  MUSIC_VIDEO_TYPE_ORIGINAL = 3;
}

// AttachmentTypes
enum AttachmentType {
  ATTACHMENT_TYPE_UNSPECIFIED = 0;
  ATTACHMENT_TYPE_PICTURE = 1;
  ATTACHMENT_TYPE_MOVIE = 2;
}
