syntax = "proto3";

package enums;

option go_package = "github.com/Shakkuuu/sekai-songs-mylist/internal/gen/enums";

// AttachmentType
enum AttachmentType {
  ATTACHMENT_TYPE_UNSPECIFIED = 0;
  ATTACHMENT_TYPE_PICTURE = 1;
  ATTACHMENT_TYPE_MOVIE = 2;
}

// ClearType
enum ClearType {
  CLEAR_TYPE_UNSPECIFIED = 0;
  CLEAR_TYPE_NOT_CLEARED = 1;
  CLEAR_TYPE_CLEARED = 2;
  CLEAR_TYPE_FULL_COMBO = 3;
  CLEAR_TYPE_ALL_PERFECT = 4;
}
